@@ -1,5 +1,9 @@
 2006-08-02  Kohei Yoshida  <kohei.yoshida@gmail.com>
 
+	* source/numeric/nlpqnewton.cxx: slightly more code cleanup.
+
+2006-08-02  Kohei Yoshida  <kohei.yoshida@gmail.com>
+
 	* source/numeric/nlpqnewton.cxx: moved method definitions into class declaration,
 	plus some code cleanup.
 
